# locals-only

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  Rules.md  SKILL.md  pyproject.toml
config/: models.yaml  tools.yaml
docs/: dev-plan.md
modelfiles/: agent-tools.Modelfile  chat-assistant.Modelfile  code-assist.Modelfile
scripts/: import-gguf.sh  index-codebase.sh  setup.sh
src/: config.py
src/agent/: dispatcher.py  runner.py
src/api/: main.py  state.py
src/api/routes/: chat.py  health.py  models.py  observe.py
src/cli/: main.py
src/context/: builder.py
src/memory/: manager.py
src/models/: adapter.py  ollama_adapter.py  pool.py  registry.py
src/observe/: bus.py
src/rag/: pipeline.py
src/tools/: file_tools.py  git_tools.py  rag_tools.py  registry.py  shell_tools.py
tests/unit/: test_adapter.py  test_context.py  test_memory.py  test_phase3.py  test_pool.py  test_tools.py
